--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
 body {
-    background: #ddd;
     font-family: 'Noto Serif JP',"Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
+    font: 15px;
+}
+svg {
+    width: 25px;
+    height: auto;
+    margin: 5px;
 }
 .cardSvg {
     margin: 10px;
@@ -9,17 +14,27 @@ body {
     justify-content: center;
 }
 .cardTable {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: auto;
+    text-align: center;
 }
-.table {
-    width: 1100px;
-    height: 480px;
-}
-.table td {
+.cardTable td {
     background-size: contain;
+    width: 85px;
+    height: 120px;
 }
-td.card.back {
+.cardTable td.card.back {
     background-image: url(../cards_svg/b02.svg) !important;
+}
+.message {
+    margin: 10px auto;
+    text-align: center;
+}
+.button {
+    display: block;
+    margin: 0 auto;
+    padding: 5px 15px;
+    cursor: pointer;
+}
+.button.hidden {
+    display: none;
 }
